--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,33 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+.idea
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 .cxx
 local.properties
+apikey.properties
+
+project.properties
+app.properties
+*.p12
+*.dex
+*.apk
+*.ap_
+*.ipr
+*.iws
+com_crashlytics_export_strings.xml
+android/libs/armeabi/
+android/libs/armeabi-v7a/
+android/libs/x86/
+android/gen/
+bin/
+gen/
+build/
+out/
+*.class
+*.war
+*.ear
+hs_err_pid*
